[gd_scene load_steps=82 format=2]

[ext_resource path="res://Player/mc_spritesheet1.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Player/IdleState.gd" type="Script" id=4]
[ext_resource path="res://Player/RunState.gd" type="Script" id=5]
[ext_resource path="res://Player/pointer.png" type="Texture" id=6]
[ext_resource path="res://Player/WeaponStateMachine.gd" type="Script" id=7]
[ext_resource path="res://Player/Weapon1.gd" type="Script" id=8]
[ext_resource path="res://Player/targetdir.gd" type="Script" id=9]
[ext_resource path="res://Player/Bullet.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player/Weapon2.gd" type="Script" id=11]
[ext_resource path="res://Player/DamageState.gd" type="Script" id=12]
[ext_resource path="res://Player/Hurtbox.gd" type="Script" id=13]
[ext_resource path="res://Player/DeathState.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.4133, 4.95538 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -50.0
radial_accel_random = 1.0

[sub_resource type="Animation" id=3]
resource_name = "AimL"
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "AimR"
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "DamageL"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "DamageR"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "DeathL"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 39, 39, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "DeathR"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 39, 39, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=68]
resource_name = "IdleL"
length = 0.75
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.75
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "RunL"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "RunR"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "ShootStL"
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "ShootStR"
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "SlideL"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=69]
resource_name = "SlideR"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "AimL"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "AimL"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "AimR"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "AimR"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( -1, 1 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( 1, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "DamageL"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "DamageL"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "DamageR"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "DamageR"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( -1, 1 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 1, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "DeathL"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "DeathL"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "DeathR"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "DeathR"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( -1, 1 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 1, -1 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "IdleL"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "IdleR"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "IdleR"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "IdleL"

[sub_resource type="AnimationNodeBlendSpace2D" id=36]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 1, -1 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( -1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "RunL"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "RunL"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "RunR"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "RunR"

[sub_resource type="AnimationNodeBlendSpace2D" id=41]
blend_point_0/node = SubResource( 37 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 38 )
blend_point_1/pos = Vector2( -1, 1 )
blend_point_2/node = SubResource( 39 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 40 )
blend_point_3/pos = Vector2( 1, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "ShootStL"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "ShootStL"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "ShootStR"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "ShootStR"

[sub_resource type="AnimationNodeBlendSpace2D" id=46]
blend_point_0/node = SubResource( 42 )
blend_point_0/pos = Vector2( -1, 1 )
blend_point_1/node = SubResource( 43 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 44 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 45 )
blend_point_3/pos = Vector2( 1, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "SlideL"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "SlideL"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "SlideR"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "SlideR"

[sub_resource type="AnimationNodeBlendSpace2D" id=51]
blend_point_0/node = SubResource( 47 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 48 )
blend_point_1/pos = Vector2( -1, 1 )
blend_point_2/node = SubResource( 49 )
blend_point_2/pos = Vector2( 1, -1 )
blend_point_3/node = SubResource( 50 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=64]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=65]
states/Aim/node = SubResource( 21 )
states/Aim/position = Vector2( 288, 104 )
states/Damage/node = SubResource( 26 )
states/Damage/position = Vector2( 457, -15 )
states/Death/node = SubResource( 31 )
states/Death/position = Vector2( 457, -118 )
states/Idle/node = SubResource( 36 )
states/Idle/position = Vector2( 457, 104 )
states/Run/node = SubResource( 41 )
states/Run/position = Vector2( 639, 104 )
states/ShootStationary/node = SubResource( 46 )
states/ShootStationary/position = Vector2( 186, 213 )
states/Slide/node = SubResource( 51 )
states/Slide/position = Vector2( 556, 219 )
transitions = [ "Idle", "Run", SubResource( 52 ), "Run", "Idle", SubResource( 53 ), "Run", "Slide", SubResource( 54 ), "Slide", "Run", SubResource( 55 ), "Slide", "Idle", SubResource( 56 ), "Idle", "Slide", SubResource( 57 ), "Idle", "Aim", SubResource( 58 ), "Aim", "Idle", SubResource( 59 ), "Aim", "ShootStationary", SubResource( 60 ), "ShootStationary", "Idle", SubResource( 61 ), "Idle", "Damage", SubResource( 62 ), "Damage", "Idle", SubResource( 63 ), "Damage", "Death", SubResource( 64 ) ]
start_node = "Idle"
graph_offset = Vector2( -76, -160 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=66]

[sub_resource type="RectangleShape2D" id=67]
extents = Vector2( 5.42876, 14.7982 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.109375, 6.89697 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.05176e-05, -15.2209 )
texture = ExtResource( 1 )
vframes = 5
hframes = 8
frame = 5

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
slide_acceleration = 0.03

[node name="Trail" type="Particles2D" parent="StateMachine/RunState"]
position = Vector2( 226.548, 159.95 )
emitting = false
amount = 20
local_coords = false
process_material = SubResource( 2 )

[node name="DamageState" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="StaggerTimer" type="Timer" parent="StateMachine/DamageState"]
wait_time = 0.45

[node name="DeathState" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="WeaponStateMachine" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Weapon1" type="Node2D" parent="WeaponStateMachine"]
script = ExtResource( 8 )
Bullet = ExtResource( 10 )

[node name="Cooldown" type="Timer" parent="WeaponStateMachine/Weapon1"]
wait_time = 0.1
one_shot = true

[node name="Weapon2" type="Node2D" parent="WeaponStateMachine"]
script = ExtResource( 11 )
Bullet = ExtResource( 10 )

[node name="Cooldown" type="Timer" parent="WeaponStateMachine/Weapon2"]
wait_time = 0.1
one_shot = true

[node name="targetdir" type="Sprite" parent="WeaponStateMachine"]
position = Vector2( 0, 7 )
rotation = 0.404916
z_index = -1
texture = ExtResource( 6 )
offset = Vector2( 20, 0 )
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AimL = SubResource( 3 )
anims/AimR = SubResource( 4 )
anims/DamageL = SubResource( 5 )
anims/DamageR = SubResource( 6 )
anims/DeathL = SubResource( 7 )
anims/DeathR = SubResource( 8 )
anims/IdleL = SubResource( 68 )
anims/IdleR = SubResource( 10 )
anims/RunL = SubResource( 11 )
anims/RunR = SubResource( 12 )
anims/ShootStL = SubResource( 13 )
anims/ShootStR = SubResource( 14 )
anims/SlideL = SubResource( 15 )
anims/SlideR = SubResource( 69 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 65 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 66 )
parameters/Aim/blend_position = Vector2( 0.358814, 0.542857 )
parameters/Damage/blend_position = Vector2( 0.221529, 0.165714 )
parameters/Death/blend_position = Vector2( -0.107644, 0.211429 )
parameters/Idle/blend_position = Vector2( 0.212168, 0.165714 )
parameters/Run/blend_position = Vector2( 0.290172, 0.177143 )
parameters/ShootStationary/blend_position = Vector2( -0.642746, 0.348571 )
parameters/Slide/blend_position = Vector2( 0.394696, -0.417143 )

[node name="Hurtbox" type="Area2D" parent="." groups=[
"Hurtboxes",
]]
collision_mask = 2
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -1.16258, -6.31116 )
shape = SubResource( 67 )
[connection signal="timeout" from="StateMachine/DamageState/StaggerTimer" to="StateMachine/DamageState" method="_on_StaggerTimer_timeout"]
[connection signal="taken_damage" from="Hurtbox" to="." method="_on_Hurtbox_taken_damage"]
